{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 386,
  "lineage": "cdf9e5f5-6665-11df-4968-6202e28b290a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tfc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:internet-gateway/igw-0a6cd783011e2f7fb",
            "id": "igw-0a6cd783011e2f7fb",
            "owner_id": "432533025406",
            "tags": {
              "Name": "Challenge Internet Gateway"
            },
            "tags_all": {
              "Name": "Challenge Internet Gateway"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tfc_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:loadbalancer/app/tf-lb-20221122193103621200000001/c2f19ef830230d78",
            "arn_suffix": "app/tf-lb-20221122193103621200000001/c2f19ef830230d78",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20221122193103621200000001-1878810906.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:432533025406:loadbalancer/app/tf-lb-20221122193103621200000001/c2f19ef830230d78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20221122193103621200000001",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05d9d81e21146e21e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03f482c79779f1183"
              },
              {
                "subnet_id": "subnet-04d93eb20bf8feaa2"
              },
              {
                "subnet_id": "subnet-06f75cb11513bde7d"
              }
            ],
            "subnets": [
              "subnet-03f482c79779f1183",
              "subnet-04d93eb20bf8feaa2",
              "subnet-06f75cb11513bde7d"
            ],
            "tags": {
              "Environment": "production",
              "name": "tfc_app_alb"
            },
            "tags_all": {
              "Environment": "production",
              "name": "tfc_app_alb"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.tfc_app_lb_sg",
            "aws_subnet.app_prv_snet_1",
            "aws_subnet.app_prv_snet_2",
            "aws_subnet.app_prv_snet_3",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tfc_bke_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:loadbalancer/app/tf-lb-20221122193104585400000002/07b298fe6dd2d606",
            "arn_suffix": "app/tf-lb-20221122193104585400000002/07b298fe6dd2d606",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-lb-20221122193104585400000002-1603885596.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:432533025406:loadbalancer/app/tf-lb-20221122193104585400000002/07b298fe6dd2d606",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20221122193104585400000002",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07578cbbea54d387a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0729418fc08372d60"
              },
              {
                "subnet_id": "subnet-0805b2a0913af63f6"
              },
              {
                "subnet_id": "subnet-0806cf4b2cf985c42"
              }
            ],
            "subnets": [
              "subnet-0729418fc08372d60",
              "subnet-0805b2a0913af63f6",
              "subnet-0806cf4b2cf985c42"
            ],
            "tags": {
              "Environment": "production",
              "name": "tfc_bke_alb"
            },
            "tags_all": {
              "Environment": "production",
              "name": "tfc_bke_alb"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.tfc_bke_lb_sg",
            "aws_subnet.bke_prv_snet_1",
            "aws_subnet.bke_prv_snet_2",
            "aws_subnet.bke_prv_snet_3",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tfc_app_alb_listen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:listener/app/tf-lb-20221122193103621200000001/c2f19ef830230d78/ef6eae94ea254a67",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:targetgroup/tfc-app-tgt-grp/bef8d48854a415a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:432533025406:listener/app/tf-lb-20221122193103621200000001/c2f19ef830230d78/ef6eae94ea254a67",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:loadbalancer/app/tf-lb-20221122193103621200000001/c2f19ef830230d78",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tfc_app_alb",
            "aws_lb_target_group.tfc_app_tgt_grp",
            "aws_security_group.tfc_app_lb_sg",
            "aws_subnet.app_prv_snet_1",
            "aws_subnet.app_prv_snet_2",
            "aws_subnet.app_prv_snet_3",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tfc_bke_alb_listen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:listener/app/tf-lb-20221122193104585400000002/07b298fe6dd2d606/8df3743bf259dece",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:targetgroup/tfc-bke-tgt-grp/1ecbae8ed5482b2e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:432533025406:listener/app/tf-lb-20221122193104585400000002/07b298fe6dd2d606/8df3743bf259dece",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:loadbalancer/app/tf-lb-20221122193104585400000002/07b298fe6dd2d606",
            "port": 4000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tfc_bke_alb",
            "aws_lb_target_group.tfc_bke_tgt_grp",
            "aws_security_group.tfc_bke_lb_sg",
            "aws_subnet.bke_prv_snet_1",
            "aws_subnet.bke_prv_snet_2",
            "aws_subnet.bke_prv_snet_3",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tfc_app_tgt_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:targetgroup/tfc-app-tgt-grp/bef8d48854a415a8",
            "arn_suffix": "targetgroup/tfc-app-tgt-grp/bef8d48854a415a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:432533025406:targetgroup/tfc-app-tgt-grp/bef8d48854a415a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tfc-app-tgt-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tfc_bke_tgt_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:432533025406:targetgroup/tfc-bke-tgt-grp/1ecbae8ed5482b2e",
            "arn_suffix": "targetgroup/tfc-bke-tgt-grp/1ecbae8ed5482b2e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:432533025406:targetgroup/tfc-bke-tgt-grp/1ecbae8ed5482b2e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tfc-bke-tgt-grp",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a6cd783011e2f7fb",
            "id": "r-rtb-045018c3a2456df9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-045018c3a2456df9b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tfc_igw",
            "aws_route_table.tfc_pub_rt_table",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfc_app_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:route-table/rtb-0224e9fbc647c2c9a",
            "id": "rtb-0224e9fbc647c2c9a",
            "owner_id": "432533025406",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfc_bke_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:route-table/rtb-042e2bf77e35b00aa",
            "id": "rtb-042e2bf77e35b00aa",
            "owner_id": "432533025406",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfc_pub_rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:route-table/rtb-045018c3a2456df9b",
            "id": "rtb-045018c3a2456df9b",
            "owner_id": "432533025406",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a6cd783011e2f7fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tfc_igw",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_prv_app_a_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03771475e7d7616c8",
            "route_table_id": "rtb-0224e9fbc647c2c9a",
            "subnet_id": "subnet-03f482c79779f1183"
          },
          "dependencies": [
            "aws_route_table.tfc_app_rt_table",
            "aws_subnet.app_prv_snet_1",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_prv_app_b_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4e5bb6ca769eb34",
            "route_table_id": "rtb-0224e9fbc647c2c9a",
            "subnet_id": "subnet-06f75cb11513bde7d"
          },
          "dependencies": [
            "aws_route_table.tfc_app_rt_table",
            "aws_subnet.app_prv_snet_2",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_prv_app_c_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad2498cbf59135a4",
            "route_table_id": "rtb-0224e9fbc647c2c9a",
            "subnet_id": "subnet-04d93eb20bf8feaa2"
          },
          "dependencies": [
            "aws_route_table.tfc_app_rt_table",
            "aws_subnet.app_prv_snet_3",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_prv_bke_a_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da39f3b6227ee92b",
            "route_table_id": "rtb-042e2bf77e35b00aa",
            "subnet_id": "subnet-0806cf4b2cf985c42"
          },
          "dependencies": [
            "aws_route_table.tfc_bke_rt_table",
            "aws_subnet.bke_prv_snet_1",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_prv_bke_b_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033d9bf022491bdcb",
            "route_table_id": "rtb-042e2bf77e35b00aa",
            "subnet_id": "subnet-0805b2a0913af63f6"
          },
          "dependencies": [
            "aws_route_table.tfc_bke_rt_table",
            "aws_subnet.bke_prv_snet_2",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_prv_bke_c_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd4a3c3bd3a9d0ee",
            "route_table_id": "rtb-042e2bf77e35b00aa",
            "subnet_id": "subnet-0729418fc08372d60"
          },
          "dependencies": [
            "aws_route_table.tfc_bke_rt_table",
            "aws_subnet.bke_prv_snet_3",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_pub_app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb7c7bfdf0c77c1e",
            "route_table_id": "rtb-045018c3a2456df9b",
            "subnet_id": "subnet-03540a9f71cbed011"
          },
          "dependencies": [
            "aws_internet_gateway.tfc_igw",
            "aws_route_table.tfc_pub_rt_table",
            "aws_subnet.lbl_pub_snet_1",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfc_pub_bke_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006afdc851301bc94",
            "route_table_id": "rtb-045018c3a2456df9b",
            "subnet_id": "subnet-06e92dc3b0fa44de6"
          },
          "dependencies": [
            "aws_internet_gateway.tfc_igw",
            "aws_route_table.tfc_pub_rt_table",
            "aws_subnet.lbl_pub_snet_2",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfc-pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:security-group/sg-084e40404cae8a7e5",
            "description": "Security Group Public",
            "egress": [],
            "id": "sg-084e40404cae8a7e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tfc-pub-sg",
            "name_prefix": "",
            "owner_id": "432533025406",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfc_app_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:security-group/sg-05d9d81e21146e21e",
            "description": "Security Group for Apps Load Balancer",
            "egress": [],
            "id": "sg-05d9d81e21146e21e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tfc_app_lb_sg",
            "name_prefix": "",
            "owner_id": "432533025406",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfc_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:security-group/sg-0ae823d66295ed92f",
            "description": "Security Group for Apps Instances",
            "egress": [],
            "id": "sg-0ae823d66295ed92f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH Internally",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Port 80 from APP-ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05d9d81e21146e21e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tfc_app_sg",
            "name_prefix": "",
            "owner_id": "432533025406",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tfc_app_lb_sg",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfc_bke_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:security-group/sg-07578cbbea54d387a",
            "description": "Security Group from Apps Instances to Bke LoadBalancer",
            "egress": [],
            "id": "sg-07578cbbea54d387a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 4000",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "tfc_bke_lb_sg",
            "name_prefix": "",
            "owner_id": "432533025406",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfc_bke_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:security-group/sg-07c372cfc454ae9c1",
            "description": "Security Group for Backend Instances",
            "egress": [],
            "id": "sg-07c372cfc454ae9c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH Internally",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Port 4000 from APP-ALB",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07578cbbea54d387a"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "tfc_bke_sg",
            "name_prefix": "",
            "owner_id": "432533025406",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tfc_bke_lb_sg",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfc_rds_dba_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:security-group/sg-04ba646aed97a2ba0",
            "description": "Security Group for RDS Database",
            "egress": [],
            "id": "sg-04ba646aed97a2ba0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Port 5432 Postgresql",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07c372cfc454ae9c1"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "tfc_rds_dba_sg",
            "name_prefix": "",
            "owner_id": "432533025406",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tfc_bke_lb_sg",
            "aws_security_group.tfc_bke_sg",
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_prv_snet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-03f482c79779f1183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f482c79779f1183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_prv_snet_1"
            },
            "tags_all": {
              "Name": "app_prv_snet_1"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_prv_snet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-06f75cb11513bde7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f75cb11513bde7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbl_pub_snet_2"
            },
            "tags_all": {
              "Name": "lbl_pub_snet_2"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_prv_snet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-04d93eb20bf8feaa2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d93eb20bf8feaa2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbl_pub_snet_2"
            },
            "tags_all": {
              "Name": "lbl_pub_snet_2"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bke_prv_snet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-0806cf4b2cf985c42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0806cf4b2cf985c42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bke_prv_snet_1"
            },
            "tags_all": {
              "Name": "bke_prv_snet_1"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bke_prv_snet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-0805b2a0913af63f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0805b2a0913af63f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bke_prv_snet_2"
            },
            "tags_all": {
              "Name": "bke_prv_snet_2"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bke_prv_snet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-0729418fc08372d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0729418fc08372d60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bke_prv_snet_3"
            },
            "tags_all": {
              "Name": "bke_prv_snet_3"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lbl_pub_snet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-03540a9f71cbed011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03540a9f71cbed011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbl_pub_snet_1"
            },
            "tags_all": {
              "Name": "lbl_pub_snet_1"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lbl_pub_snet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-06e92dc3b0fa44de6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e92dc3b0fa44de6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lbl_pub_snet_2"
            },
            "tags_all": {
              "Name": "lbl_pub_snet_2"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds_prv_snet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:subnet/subnet-0a64299c5f08e9678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a64299c5f08e9678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "432533025406",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rds_prv_snet_1"
            },
            "tags_all": {
              "Name": "rds_prv_snet_1"
            },
            "vpc_id": "vpc-04fe57c58bb6fc139"
          },
          "dependencies": [
            "aws_vpc.tfc_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tfc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:432533025406:vpc/vpc-04fe57c58bb6fc139",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01fb8dea7fc9d0a0b",
            "default_route_table_id": "rtb-029ddafa117c49606",
            "default_security_group_id": "sg-0636301f30a6dc06d",
            "dhcp_options_id": "dopt-06ac04a41433e3b76",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fe57c58bb6fc139",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029ddafa117c49606",
            "owner_id": "432533025406",
            "tags": {
              "Name": "tfc_vpc"
            },
            "tags_all": {
              "Name": "tfc_vpc"
            }
          }
        }
      ]
    }
  ]
}